tests/error/py_errors/list_empty.err
Guppy compilation failed. Error in file $FILE:6

4:    @compile_guppy
5:    def foo() -> None:
6:        xs = py([])
               ^^^^^^
GuppyTypeError: Cannot infer type variable in expression of type `list[?T]`
